[1.20/1.20.1] Revert URLUtil to a version Forge likes